# oc-monitor

./: .gitignore  LICENSE  README.en.md  README.md  dev.bat  dev.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/screenshots/: README.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  window_interaction.rs  window_style.rs
src-tauri/src/api/: ccswitch_reader.rs  claude_log_reader.rs  client.rs  error.rs  mod.rs  models.rs  platform_auth.rs  platform_usage.rs  platform_webview.rs  pricing.rs  usage_aggregate.rs
src-tauri/src/auto_start/: mod.rs
src-tauri/src/commands/: analysis.rs  api.rs  cache.rs  mod.rs  platform.rs  refresh.rs  settings.rs  tray_cmd.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/store/: crypto.rs  mod.rs
src-tauri/src/tray/: mod.rs
src/components/: PlatformLoginBanner.tsx  TitleBar.tsx
src/components/AiAnalysis/: AiReportView.tsx  CacheTokenChart.tsx  HitRateTrendChart.tsx  index.tsx
src/components/MainPanel/: BalanceCard.tsx  ChartTooltipOverlay.tsx  ModelUsageList.tsx  MonthlyCost.tsx  ThisWeekUsage.tsx  TodayUsage.tsx  UsageTrendChart.tsx  index.tsx
src/components/Settings/: index.tsx
src/components/common/: CustomCursor.tsx  LoadingSpinner.tsx  QuickActionMenu.tsx  StatusIndicator.tsx  ToggleSwitch.tsx  TrendSparkline.tsx
src/hooks/: usePolling.ts  useTauriEvent.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/stores/: useAppStore.ts  useSettingsStore.ts  useWindowStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: aiReport.ts  analysisLayout.ts  balanceEstimate.ts  constants.ts  cursorTarget.ts  cursorWindowBounds.ts  format.ts  modelUsage.ts  platformLogin.ts  trayMenu.ts  usageAggregate.ts  usageAnalysis.ts
