[package]
name = "oc-monitor"
version = "0.1.0"
description = "OC-Monitor - Windows 桌面版，监控 OpenCode Claude Code 用量"
authors = ["Apeacefullife"]
edition = "2021"

[lib]
name = "oc_monitor_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
winreg = "0.56.0"
rusqlite = { version = "0.32", features = ["bundled"] }
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[package.metadata]
icons = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png"
]

[package.metadata.tauri-winres]
